@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.70 2017/09/04 18:25:05 wiz Exp $
+# $NetBSD: Makefile,v 1.71 2017/09/05 06:00:47 wiz Exp $
 #
 
 COMMENT=	Input method tools and libraries
@@ -85,7 +85,6 @@ SUBDIR+=	scim-sinhala
 SUBDIR+=	scim-skk
 SUBDIR+=	scim-tables
 SUBDIR+=	scim-tables-vietnamese-ext
-SUBDIR+=	scim-tegaki
 SUBDIR+=	scim-thai
 SUBDIR+=	scim-tomoe
 SUBDIR+=	scim-uim
