@@ -1,4 +1,0 @@
-@comment $NetBSD: PLIST,v 1.2 2012/04/08 20:21:49 wiz Exp $
-${PYSITELIB}/${EGG_FILE}
-share/scim-python/helper/tegaki/__init__.py
-share/scim-python/helper/tegaki/scimtegaki.py
