@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2017,v 1.3612 2017/09/04 20:31:52 wiz Exp $
+$NetBSD: CHANGES-2017,v 1.3613 2017/09/05 06:00:47 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2017:
 
@@ -5077,3 +5077,4 @@ Changes to the packages collection and infrastructure in 2017:
 	Updated graphics/gdk-pixbuf2-jasper to 2.36.9 [ryoon 2017-09-04]
 	Updated graphics/gdk-pixbuf2-xlib to 2.36.9 [ryoon 2017-09-04]
 	Updated graphics/netpbm to 10.79.04 [wiz 2017-09-04]
+	Removed inputmethod/scim-tegaki [wiz 2017-09-05]
